2014-01-16  Miguel de Dios <miguel.dedios@artica.es>
	
	* general/header.php: fixed the PHP notices about the var
	$search_keywords.

2014-01-16  Ramon Novoa  <rnovoa@artica.es>

	* godmode/alerts/alert_list.list.php,
	  include/functions.php,
	  include/functions_alerts.php: Changes to the alert view to make it more
	  compact.

2014-01-14  Sergio Martin <sergio.martin@artica.es>

	* include/functions_config.php: Fixed a warning message on
	PHP configuration advise. For Sourceforge ticket #2409

2014-01-14  Sergio Martin <sergio.martin@artica.es>

	* include/functions_groups.php: Fix group parameter in links
	of groups view on mobile console. Incident #491

2014-01-14  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/reporting_builder.list_items.php: fixed the
	list of modules from inventory item.

2014-01-13  Sergio Martin <sergio.martin@artica.es>

	* include/functions_config.php: Added to the header warnings the
	checking of some php.ini values for incident #393

2014-01-13  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_flot.php: fix unecessary space under the
	area graphs when menu is not setted. If is setted, this space is
	for the overview graph. Incident #499

2014-01-10  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_visual_map.php: fixed the show simple values in
	the visualconsole editor from the old Pandora versions.
	
	Fixes: #2407

2014-01-09  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/flot/pandora.flot.js
	include/graphs/functions_flot.php: Fixed problem with the overview
	graph in IE9 for incident #477

2014-01-09  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions.php: added function "https_is_running".
	
	* include/functions_gis.php, operation/gis_maps/render_view.php,
	operation/gis_maps/public_console.php, godmode/setup/gis_step_2.php:
	fixed the urls for google maps when it is running in https mode.
	
	Fixes: #2403

2014-01-09  Junichi Satoh  <junichi@rworks.jp>