@@ -89,7 +89,7 @@ if ($agent_to_delete) {
 		// Check if the remote config file still exist
 		if (isset ($config["remote_config"])) {
 			enterprise_include_once('include/functions_config_agents.php');
-			if (enterprise_hook('config_agents_has_remote_configuration', $id_agente)) {
+			if (enterprise_hook('config_agents_has_remote_configuration', array($id_agente))) {
 				ui_print_error_message(__('Maybe the files conf or md5 could not be deleted'));
 			}
 		}
