@@ -1,5 +1,12 @@
 2014-01-16  Miguel de Dios <miguel.dedios@artica.es>
 	
+	* godmode/agentes/modificar_agente.php,
+	include/functions_agents.php: fixed the PHP warnings and notices.
+	
+	Fixes: #2412
+
+2014-01-16  Miguel de Dios <miguel.dedios@artica.es>
+	
 	* general/header.php: fixed the PHP notices about the var
 	$search_keywords.
 
